style.css
*{
margin:0;
padding:0;
box-sizing:border-box;
}

body{
background:#0f0f12;
font-family:Arial;
padding:30px;
color:white;
}

.container{
max-width:760px;
margin:auto;
background:#18181c;
padding:30px;
border-radius:24px;
}

.mode{
float:right;
padding:12px;
}

.header{
text-align:center;
}

.logo{
width:60px;
margin-bottom:12px;
}

.desc{
margin-top:10px;
opacity:.8;
}

.quick{
display:grid;
grid-template-columns:1fr 1fr;
gap:14px;
margin-top:25px;
}

.card{
background:#202025;
padding:26px;
border-radius:18px;
cursor:pointer;
text-align:center;
}

.input-area{
display:flex;
gap:10px;
margin-top:25px;
}

#msg{
flex:1;
padding:16px;
border-radius:14px;
border:none;
}

.send{
background:#2563eb;
color:white;
}

.clear{
background:#ef4444;
color:white;
}

button{
border:none;
padding:16px;
border-radius:14px;
cursor:pointer;
}

#chat{
margin-top:25px;
display:flex;
flex-direction:column;
gap:15px;
max-height:500px;
overflow:auto;
}

.user{
align-self:flex-end;
background:#2563eb;
padding:14px;
border-radius:18px;
}

.bot{
display:flex;
gap:12px;
background:#ececec;
color:black;
padding:14px;
border-radius:18px;
max-width:80%;
}

.avatar{
width:42px;
height:42px;
border-radius:50%;
}

.stats{
margin-top:25px;
background:#202025;
padding:18px;
border-radius:18px;
}

.footer{
margin-top:20px;
text-align:center;
opacity:.7;
}

